@@ -1,6 +1,7 @@
-import rfc822
 import unittest
 from test import test_support
+
+rfc822 = test_support.import_module("rfc822", deprecated=True)
 
 try:
     from cStringIO import StringIO
