@@ -84,6 +84,8 @@ Extension Modules
 Library
 -------
 
+- The rfc822 module has been deprecated for removal in 3.0.
+
 - The mimetools module has been deprecated for removal in 3.0.
 
 - The ctypes.byref function now takes an optional second parameter
